pom.xml updated for deploy with Apache Tomcat, Lombok temporarilly disabled

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -508,10 +508,13 @@
 	<div class="text-center py-2 copyrightFooter">
 		<form action="/form">
 			<button type="submit" class="btn btn-default linkToForm">
-				<img src="/images/main/logoSVG.svg" width="40" height="40">
+				<img src="../static/images/main/logoSVG.svg" width="40" height="40">
 			</button>
 		</form>
 		© 2020 Copyright: GPA
+		<a class="linkToForm" href="form.html">
+    <img src="../static/images/main/logoSVG.svg" width="40" height="40" align="center">
+  </a>
 	</div>
 
 </body>
