--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,16 +1,20 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Grupa Przedsiębiorstw Alpinistycznych</title>
 <meta name="author" content="Joanna Zdżalik">
 <meta name="description" content="GPA">
+<link rel="shortcut icon" th:href="@{images/favicons/favicon.ico}">
+<link rel="icon" sizes="16x16 32x32 64x64"
+	th:href="@{images/favicons/favicon.ico}">
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 	crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="/css/form.css">
+<link rel="stylesheet" type="text/css" href="../static/css/form.css"
+	th:href="@{/css/form.css}">
 <link
 	href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext'
 	rel='stylesheet' type='text/css'>
@@ -30,15 +34,16 @@
 	crossorigin="anonymous"></script>
 
 <body>
-
-	<div class="container formBox">
+	<form th:action="@{/addoffer}" method="post"
+		th:object="${offerToCreate}">
+		<div class="container formBox">
 			<h3>Tworzenie oferty</h3>
-
 			<!--Tytuł -->
 			<div class="d-flex flex-row justify-content-center">
 				<div class="form-group col-md-8 mb-20">
 					<label for="title">Tytuł oferty: </label> <input type="text"
-						id="title" class="form-control" placeholder="Wprowadź tytuł...">
+						id="title" class="form-control" placeholder="Wprowadź tytuł..."
+						th:field="*{title}" th:required="required">
 				</div>
 			</div>
 
@@ -98,7 +103,7 @@
 			<div class="d-flex flex-row justify-content-center">
 				<div class="form-group col-md-8">
 					<label for="vat">VAT [%]: </label> <input type="number" id="vat"
-						class="form-control">
+						class="form-control" th:field="*{percentVAT}">
 				</div>
 			</div>
 
@@ -107,7 +112,8 @@
 			<div class="d-flex flex-row justify-content-center ">
 				<div class="form-group col-md-8 mb-20">
 					<label for="duration">Szacowany czas prac: </label> <input
-						type="text" id="duration" class="form-control"> <small
+						type="text" id="duration" class="form-control"
+						th:field="*{durationOfWork}"> <small
 						class="form-text text-muted">Np. 6 dni roboczych</small>
 				</div>
 			</div>
@@ -115,16 +121,17 @@
 			<!-- Oferta ważna przez-->
 			<div class="d-flex flex-row justify-content-center">
 				<div class="form-group col-md-8 mb-20">
-					<label for="validity">Oferta ważna przez: </label> <input
-						type="text" id="validity" class="form-control" value="6 miesięcy">
+					<label for="validFor">Oferta ważna przez: </label> <input
+						type="text" id="validFor" class="form-control"
+						  value="6 miesięcy" name="validFor">
 				</div>
 			</div>
 
 			<!--Dodatkowe informacje -->
 			<div class="d-flex flex-row justify-content-center">
 				<div class="form-group col-8 mb-20">
-					<label for="price">Dodatkowe informacje: </label>
-					<textarea class="form-control mb-1" rows="5">Prace będą wykonywane przy wykorzystaniu technik alpinistycznych. Narzędzia oraz materiały do prowadzenia prac są po stronie wykonawcy. Zleceniodawca jest zobowiązany do zapewnienia dostępu do dachu (wyłaz), wody oraz energii elektrycznej (gniazdko 230 V)w trakcie wykonywania prac. Czas prowadzenia prac na obiekcie szacuje się na 6 dni roboczych. Oferta jest ważna przez 6 miesięcy.</textarea>
+					<label for="additionalInfo">Dodatkowe informacje: </label>
+					<textarea class="form-control mb-1" rows="5" id="additionalInfo" name="additionalInfo">Prace będą wykonywane przy wykorzystaniu technik alpinistycznych. Narzędzia oraz materiały do prowadzenia prac są po stronie wykonawcy. Zleceniodawca jest zobowiązany do zapewnienia dostępu do dachu (wyłaz), wody oraz energii elektrycznej (gniazdko 230 V)w trakcie wykonywania prac.</textarea>
 				</div>
 			</div>
 
@@ -135,8 +142,9 @@
 						multiple="multiple" accept="" class="form-control-file" id="file">
 				</div>
 			</div>
+			<button type="submit" class="btn GPAbutton">Zapisz i wyślij</button>
 
-			<!-- Przyciski na dole -->
+			<!-- Przyciski na dole 
 			<div class="d-flex flex-row justify-content-center mt-20 mb-20">
 				<form action="/index">
 					<button type="submit" class="btn GPAbutton">Zapisz i
@@ -146,12 +154,11 @@
 					<button type="submit" class="btn btn-default GPAbutton">
 						Powrót
 					</button>
-				</form>
+				</form> </div>
 
-				<a class="btn GPAbutton" href="main.html" role="button">Powrót</a>
-			</div>
-		
-	</div>
+		-->
+		</div>
 
+	</form>
 </body>
 </html>
