--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
 	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 	crossorigin="anonymous"></script>
 
+
 <body>
 	<!-- NAGŁÓWEK -->
 	<div class="header">
@@ -82,8 +83,7 @@
 					<th colspan="6">CENNIK USŁUG</th>
 				</tr>
 				<tr>
-					<th scope="col">DZIAŁ
-					</td>
+					<th scope="col">DZIAŁ </th>
 					<th colspan="2">RODZAJ PRACY</th>
 					<th style="width: 10%">CENA</th>
 					<th style="width: 5%">JEDN.</th>
@@ -466,7 +466,7 @@
 				<div class="card">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item autoplay loop controls muted"
-							th:src="@{/video/mlyny.mp4}" type="video/mp4"></iframe>
+							th:src="@{/video/mlyny.mp4}"></iframe>
 					</div>
 					<div class="card-body">
 						<p class="card-text">Mlyny -- pomysl na podpis?</p>
@@ -489,7 +489,7 @@
 				<div class="card">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item autoplay loop controls muted"
-							th:src="@{/video/mycie.mp4}" type="video/mp4"></iframe>
+							th:src="@{/video/mycie.mp4}"></iframe>
 					</div>
 					<div class="card-body">
 						<p class="card-text">Mycie ciśnieniowe elewacji</p>
@@ -499,7 +499,7 @@
 
 		</div>
 	</div>
-	</div>
+	
 
 	<!-- STOPKA -->
 	<div class="container-fluid mt-20 detailsFooter">
