--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -476,7 +476,7 @@
 			<div class="col-4">
 				<div class="card">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item autoplay loop controls muted"
+						<iframe class="embed-responsive-item controls muted"
 							th:src="@{/video/komory.mp4}" type="video/mp4"></iframe>
 					</div>
 					<div class="card-body">
@@ -488,7 +488,7 @@
 			<div class="col-4">
 				<div class="card">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item autoplay loop controls muted"
+						<iframe class="embed-responsive-item controls muted"
 							th:src="@{/video/mycie.mp4}"></iframe>
 					</div>
 					<div class="card-body">
