--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -18,11 +18,11 @@
 <link th:rel="stylesheet"
 	th:href="@{/assets/izitoast/css/iziToast.css} " />
 <link th:rel="stylesheet"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css} " />
+	th:href="@{/libs/bootstrap/css/bootstrap.min.css} " />
 </head>
-<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/libs/jquery/jquery.min.js}"></script>
+<script th:src="@{/libs/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/libs/bootstrap/js/bootstrap.min.js}"></script>
 <script th:src="@{/assets/izitoast/js/iziToast.min.js}"></script>
 <script type="text/javascript" src="../static/js/form.js"
 	th:src="@{/js/form.js}"></script>
