--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -44,6 +44,8 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+   -webkit-appearance: none;
+    display: none;
 }
 
 .red {
